<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_launcher"
        android:gravity="center"
        android:text="@string/title_text3"
        android:textColor="@color/text_color6"
        android:textSize="@dimen/text_size16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_ph" />

                <EditText
                    android:id="@+id/et_log_ph"
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_text1"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1" />

                <ImageView
                    android:id="@+id/iv_input_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_input_clean" />
            </LinearLayout>

            <View style="@style/SplitLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_psw" />

                <EditText
                    android:id="@+id/et_log_psw"
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`~!@#$%^*()_+-=.,"
                    android:hint="@string/hint_text2"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/selector_so" />
            </LinearLayout>

            <View style="@style/SplitLine" />
        </LinearLayout>

        <include layout="@layout/include_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_log_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/btn_text2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_log_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/btn_text3" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <View style="@style/SplitLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/umeng_socialize_wechat"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/btn_text1" />
    </LinearLayout>
</RelativeLayout>
