<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color1"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="小花店"
                        android:textSize="@dimen/text_size16"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="经历了风雨，就能见到彩虹？" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_fillet_color2"
                        android:text="去认证 >"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:textColor="@color/text_color6" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/tv_me_red"
                    style="@style/MeTextStyle"
                    android:drawableLeft="@drawable/ic_data"
                    android:text="@string/item_text1" />

                <View style="@style/SplitLine" />

                <TextView
                    android:id="@+id/tv_me_pack"
                    style="@style/MeTextStyle"
                    android:drawableLeft="@drawable/ic_data"
                    android:text="@string/item_text2" />

                <View style="@style/SplitLine" />

                <TextView
                    android:id="@+id/tv_me_data"
                    style="@style/MeTextStyle"
                    android:drawableLeft="@drawable/ic_data"
                    android:text="@string/item_text3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/tv_me_feedback"
                    style="@style/MeTextStyle"
                    android:drawableLeft="@drawable/ic_data"
                    android:text="@string/item_text4" />

                <View style="@style/SplitLine" />

                <TextView
                    android:id="@+id/tv_me_about"
                    style="@style/MeTextStyle"
                    android:drawableLeft="@drawable/ic_data"
                    android:text="@string/item_text5" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
