<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_launcher"
        android:gravity="center"
        android:text="@string/title_text5"
        android:textColor="@color/text_color6"
        android:textSize="@dimen/text_size16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_ph" />

                <EditText
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_text3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_input_clean" />
            </LinearLayout>

            <View style="@style/SplitLine2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_ph" />

                <EditText
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_text5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color1"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:background="@drawable/bg_fillet_color1"
                    android:text="@string/btn_text5" />
            </LinearLayout>

            <View style="@style/SplitLine2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_psw" />

                <EditText
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`~!@#$%^*()_+-=.,"
                    android:hint="@string/hint_text2"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/selector_so" />
            </LinearLayout>

            <View style="@style/SplitLine2" />
        </LinearLayout>

        <include layout="@layout/include_button" />

    </LinearLayout>


</RelativeLayout>
