<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_reg_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right"
        android:padding="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_launcher"
        android:gravity="center"
        android:text="@string/title_text4"
        android:textColor="@color/text_color6"
        android:textSize="@dimen/text_size16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_ph" />

                <EditText
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_text3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_input_clean" />
            </LinearLayout>

            <View style="@style/SplitLine2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_log_psw" />

                <EditText
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_text4"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_input_clean" />
            </LinearLayout>

            <View style="@style/SplitLine2" />
        </LinearLayout>

        <include layout="@layout/include_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/cb_reg_arg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/selector_agr_choice"
                android:checked="true"
                android:paddingLeft="5dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="我已阅读并同意"
                android:textColor="@color/text_color_type1"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tv_reg_agreement"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="《平台协议》"
                android:textColor="@color/text_color7"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tv_reg_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:text="@string/btn_text4" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
